--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <img src="images/imagem da oficina.png" alt="Imagem da Auto Elétrica.">
 
        
-          <p>Estamos localizados em Anápolis Goiás no Setor Residencial Pedro Ludovico, Quadra 2, Lote 24. 
+          <p>Estamos localizados em Anápolis Goiás no Setor Residencial Pedro Ludovico, Quadra 2, Lote 24. <br>
               Prestamos serviços em variados serviços em toda Anápolis em :
         <pre>
         Elétrica Automotiva.
